# py-uboot-env

./: README.md  pyproject.toml  setup.py  uboot-env.py
.github/workflows/: publish-to-test-pypi.yml  run-tests.yml
py_uboot_env/: README.md
py_uboot_env/examples/: README.md
src/py_uboot_env/examples/: sample-uboot.env
tests/: __init__.py
